# camera-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
