[package]
name = "camera-viewer"
version = "0.1.0"
description = "Camera and Image Viewer App"
authors = ["you"]
license = ""
repository = ""
default-run = "camera-viewer"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
